Web App Configuration

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -2,12 +2,28 @@
 <html>
 
 <head>
-    <title>Barely Afloat - 2023</title>
+	<title>Barely Afloat - 2023</title>
+	<style>
+	.center_align {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		right: 0;
+		left: 0;
+		margin: auto;
+		height: 500px;
+		width: 500px;
+		text-align: center;
+	}
+	</style>
 </head>
 
 <body>
-    Coming Soon...
-    Barely Afloat
+	<div class="center_align">
+	    <h1>Coming Soon...</h1>
+	    <h1>Barely Afloat</h1>
+	    To know more <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUJcmljayByb2xs' target="_blank">click here</a>
+	</div>
 </body>
 
 </html>
