--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Barely Afloat - 2023</title>
+	<link rel="icon" type="image/png" href="/logo.png" />
 	<style>
 	.center_align {
 		position: absolute;
@@ -20,6 +21,7 @@
 
 <body>
 	<div class="center_align">
+	    <img src="/logo.png" width="200px"></img>
 	    <h1>Coming Soon...</h1>
 	    <h1>Barely Afloat</h1>
 	    To know more <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUJcmljayByb2xs' target="_blank">click here</a>
