--- a/webapp/templates/register.html
+++ b/webapp/templates/register.html
@@ -6,7 +6,7 @@
     <title>Barely Afloat - Register - 2023</title>
     <link rel="icon" type="image/png" href="/images/logo.png" />
     <link rel="stylesheet" href="/css/register_style.css">
-	<script src="/register.js" type="text/javascript"></script>
+	<script src="/js/register.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -21,6 +21,7 @@
 					<input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required>
                     <input type="submit" id="submit" value="Register" disabled>
                 </form>
+				<p style="margin:10px;">Already have an account? <a style="color:rgb(83, 179, 64);background: aliceblue;border-radius: 2px;padding: 2px;" href="/login">Login here</a></p>
             </div>
         </div>
     </div>
