--- a/webapp/templates/register_device.html
+++ b/webapp/templates/register_device.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="/css/register_device_style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barely Afloat - Register Device - 2023</title>
     <link rel="icon" type="image/png" href="/images/logo.png" />
-    <link rel="stylesheet" href="/css/register_device_style.css">
 	<script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 </head>
 
@@ -13,6 +13,7 @@
 	<div class="header"><button onclick="document.location='/dashboard'">← Back</button></div>
     <div class="main-container">
         <div class="register-dev-container">
+			<img src="/images/flat_logo.png" class="logo">
             <span id="FarmID"></span>
 			<div id="reader"></div>
 			<span id="Status">Scan Compute Module!</span>
