--- a/webapp/static/css/dashboard_style.css
+++ b/webapp/static/css/dashboard_style.css
@@ -13,15 +13,11 @@ html, body {
 }
 
 .centered-img {
-	/* display: flex; */
-	/* justify-content: center; */
-	/* align-items: center; */
 	position: relative;
 	height: 15vh;
 }
 
 .logo {
-	/* width: 100%; */
 	width: 25vh;
 	margin-top: 10px;
 	position: absolute;
@@ -73,11 +69,9 @@ html, body {
 	width: 100%;
 	max-width: 100%;
 	height: 150px;
-	/* background-color: #0000FF; */
 	background: transparent;
 	background-color: transparent;
 	margin-top: 5px;
-	/* Blue background for the .gauge div */
 	bleed: button
 }
 
@@ -153,26 +147,16 @@ hr {
 	font-size: 20px;
 }
 
-/* .chartCard {
-	width: 100vw;
-	height: calc(100vh - 40px);
-	background: rgba(54, 162, 235, 0.2);
-	display: flex;
-	align-items: center;
-	justify-content: center;
-} */
-
 .chartBox {
-	/* width: 700px; */
 	padding: 20px;
 	border-radius: 20px;
-	/* border: solid 3px rgba(54, 162, 235, 1); */
-	/* background: white; */
 	background: transparent;
+	transition:all 0.3s ease-in-out;
 }
 
 .chartBox:hover{
 	cursor:pointer;
+	transform:scale(1.2);
 }
 
 .canvas {
@@ -283,6 +267,11 @@ input:checked + .slider:before {
   color: #f1f1f1;
 }
 
+.sidebar-link:hover{
+	background: #216400;
+	transition: 0.5s ease-in-out;
+}
+
 /* Position and style the close button (top right corner) */
 .sidenav .closebtn {
   position: absolute;
@@ -307,7 +296,6 @@ input:checked + .slider:before {
 	border: 0px;
 	right: 10px;
 	top: 10px;
-	/* bottom: 0; */
 	margin: auto;
 }
 
